welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:3: error: '{' expected but '(' found.
(_,_,true) => return false
^answerCell:4: error: not a legal formal parameter
(true,true,false)=> return true
 ^